apps/mytodo-be/overlay/dev/mytodo-be-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-mytodo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
