apps/mytodo-be/overlay/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytodo-be
spec:
  template:
    spec:
      containers:
      - name: mytodo-be
        image: snagurum/mytodo-be:latest
