apps/mytodo-be/overlay/dev/alb-ingress.yaml
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
  

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-mytodo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: shared-alb
    # alb.ingress.kubernetes.io/create-acm-cert: "true"
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:409447267116:certificate/76eda485-9bb5-463f-b52c-fd5ac3dd45a0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: "8001"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120
spec:
  ingressClassName: alb
  rules:
    - host: api.dev.snagurum.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-mytodo-be
                port:
                  number: 8000
